# deadnews-template-ansible

./: .ansible-lint  .pre-commit-config.yaml  .renovaterc.json  .taplo.toml  Makefile  Makefile.play.mk  README.md  pyproject.toml  requirements.yml
.github/workflows/: main.yml
roles/traefik/files/: daemon.json  docker-compose.yml
roles/traefik/molecule/traefik/: molecule.yml
roles/traefik/tasks/: main.yml
roles/traefik/templates/: vector.yml.j2
