[project]
name            = "deadnews-template-ansible"
description     = "Ansible Project Template"
version         = "0.0.0"
authors         = [{ name = "deadnews", email = "deadnewsgit@gmail.com" }]
requires-python = ">=3.13"

dependencies = ["ansible-core>=2.18.3"]

[dependency-groups]
dev = [
  "ansible-lint>=24.12.2",
  "galaxy-update>=0.0.1",
  "molecule-plugins[docker,vagrant]>=23.5.3",
  "molecule>=24.12.0",
  "pytest-ansible>=24.12.0",
  "pytest>=8.3.4",
]

[tool.pytest.ini_options]
addopts   = "--verbose"
testpaths = ["tests"]
markers   = ["docker", "molecule", "no_driver", "vagrant"]
