[project]
name            = "deadnews-template-ansible"
description     = "Ansible Project Template"
version         = "0.0.0"
authors         = [{ name = "deadnews", email = "deadnewsgit@gmail.com" }]
requires-python = ">=3.13"

dependencies = ["ansible-core>=2.18.3"]

[dependency-groups]
dev = [
  "ansible-lint>=25.6.1",
  "galaxy-update>=1.0.0",
  "molecule-plugins[docker,vagrant]>=23.7.0",
  "molecule>=25.6.0",
  "pytest-ansible>=25.6.2",
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
addopts   = "--verbose"
testpaths = ["tests"]
markers   = ["docker", "molecule", "no_driver", "vagrant"]
